samples/_failures_safe/1761394422_e4dd21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76afaec5.c: In function ‘main’:
./samples/SAFE/__tmp_76afaec5.c:151:5: error: expected declaration or statement at end of input
  151 |     }
      |     ^
